src/objects/Clinical_Apt_Procedure__c.object
<CustomObject>
    <fields>
        <fullName>Clinical_Appointment__c</fullName>
        <label>Clinical Appointment</label>
        <referenceTo>Clinical_Appointment__c</referenceTo>
        <relationshipLabel>Clinical Apt Procedures</relationshipLabel>
        <relationshipName>Clinical_Apt_Procedures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clinical_Procedure__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Clinical Procedure</label>
        <referenceTo>Clinical_Procedure__c</referenceTo>
        <relationshipLabel>Clinical Apt Procedures</relationshipLabel>
        <relationshipName>Clinical_Apt_Procedures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Clinical Apt Procedure</label>
    <nameField>
        <displayFormat>CAP-{0000}</displayFormat>
        <label>Clinical Apt Procedure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Apt Procedures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>